--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     width="350px" height="245px" alt="" class=" img8"></a>
         </div>
         <div class="items img13">
-            <a href="" target="_blank"><img src="img-1.png" width="350px" height="245px" alt="" class=" img8"></a>
+            <a href="https://akfood-app.herokuapp.com/" target="_blank"><img src="./images/food.png" width="350px" height="245px" alt="" class=" img8"></a>
         </div>
     </div>
     <!------MyResume -------------------------------------------->
@@ -231,7 +231,7 @@
     </div>
     <div id="footer">
         <h2><span style="color:red;">©️</span> kava. All rights reserved </h2>
-        <p>📌Note: This Page is Designed with Pure HTML and CSS only.</p>
+        <p>📌Note: This Page is Designed with Pure HTML and CSS only.❌It is not Responsive to Mobile devices.</p>
     </div>
     </div>
 
