--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="roll">A FULLSTACK <span class="auto-type">MERN DEVELOPER</span></div>
                 <div class="line">Get ready to turn ideas into reality</div><br>
                 <button class="button1"><a href="#contact" class="button1">Hire Me</a></button>
-                <button class="button2"><a href="./KAVA's Resume (1).pdf" download="Resume KAVA" class="b2">Get
+                <button class="button2"><a href="./KAVA's Resume.pdf" download="Resume KAVA" class="b2">Get
                         Resume</a></button>
 
 
@@ -102,16 +102,16 @@
                     width="350px" height="245px" alt="" class=" img8"></a>
         </div>
         <div class="items img13">
-            <a href="https://akfood-app.herokuapp.com/" target="_blank"><img src="./images/food.png" width="350px"
+            <a href="https://delivery-app-food-react.netlify.app/" target="_blank"><img src="./images/food.png" width="350px"
                     height="245px" alt="" class=" img8"></a>
         </div>
 
         <div class="items img12">
-            <a href="https://app-blog-full.herokuapp.com/" target="_blank"><img src="./images/Blog-app.png"
+            <a href="https://fullstack-blog-app-six.vercel.app/" target="_blank"><img src="./images/Blog-app.png"
                     width="350px" height="245px" alt="" class=" img8"></a>
         </div>
         <div class="items img11">
-            <a href="https://form-reg-react.herokuapp.com/" target="_blank"><img src="./images/Form.png" width="350px"
+            <a href="https://imdb-clone-reactapp.vercel.app/" target="_blank"><img src="./images/imdb.png" width="350px"
                     height="245px" alt="" class=" img8"></a>
         </div>
     </div>
